# CC4M

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Dockerfile.web  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  compose.yml  config.py  main.py  pyproject.toml  requirements-dev.txt  requirements-web.txt  requirements.txt
.github/: copilot-instructions.md
dest/analysis_params/: FightPandemics.FightPandemics.json  tgrall.redis-microservices-demo.json
dest/clone_metrics/: FightPandemics.FightPandemics_JavaScript.json  FudanSELab.train-ticket_Go.json  FudanSELab.train-ticket_Java.json  FudanSELab.train-ticket_JavaScript.json  Microservice-API-Patterns.LakesideMutual_Java.json  Microservice-API-Patterns.LakesideMutual_JavaScript.json  lightstep.opentelemetry-examples_Go.json  lightstep.opentelemetry-examples_Java.json  (+8 more)
docs/: README.md  architecture.md  dataset.md  declaration_line_filtering.md  definitions.md  file_classification.md  metrics.md  usage.md
lib/CLAIM/: LICENSE  (+1 more)
paper/: main.tex  references.bib
scripts/: build_ccfindersw_parser.sh  migrate_ms_detection_to_json.py  run_tests.ps1  run_tests.sh  run_web.ps1  run_web.sh  tune_file_type_classifier.py
src/: sidebar_nav.py
tests/: test_build_enriched_fragments.py  test_build_scatter_dataset.py  test_cochange_display.py  test_compute_clone_metrics.py  test_enrich_services.py  test_file_type_classifier.py  test_filter_callbacks.py  test_load_clone_metrics.py  test_project_discovery.py  test_project_stats.py  test_scatter_callbacks.py  test_scatter_plot_coordinates.py  test_source_filter.py
(+143 files in other folders)
