[project]
name = "cc4m"
version = "0.1.0"
description = "Code clone analysis and visualization for microservices"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = []

[dependency-groups]
dev = [
    "black>=25.12.0",
    "ruff>=0.14.9",
]

[tool.pytest.ini_options]
norecursedirs = ["dest"]
pythonpath = ["src"]
